syntax = "proto3";

package payment;
option go_package="./payment";

//付款
message PaymentReq{

}
message PaymentResp{

}

//取消付款
message cancelPaymentReq{

}
message cancelPaymentResp{

}


service Payment {
  //付款
  rpc payment(PaymentReq)returns(PaymentResp);
  //取消付款
  rpc cancelPayment(cancelPaymentReq)returns(cancelPaymentResp);
}
